Format code using ruff

--- a/thesis_floor_halkes/batch/test_batch.ipynb
+++ b/thesis_floor_halkes/batch/test_batch.ipynb
@@ -18,7 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from thesis_floor_halkes.batch.graph_data_batch import GraphGenerator, RandomGraphDataset"
+    "from thesis_floor_halkes.batch.graph_data_batch import (\n",
+    "    GraphGenerator,\n",
+    "    RandomGraphDataset,\n",
+    ")"
    ]
   },
   {
@@ -29,17 +32,17 @@
    "outputs": [],
    "source": [
     "dataset = RandomGraphDataset(\n",
-    "        num_graphs=50,\n",
-    "        min_nodes=10,\n",
-    "        max_nodes=35,\n",
-    "        min_prob=0.1,\n",
-    "        max_prob=0.5,\n",
-    "        max_wait=30,\n",
-    "        min_length=100.0,\n",
-    "        max_length=1000.0,\n",
-    "        min_speed=30.0,\n",
-    "        max_speed=100.0\n",
-    "    )"
+    "    num_graphs=50,\n",
+    "    min_nodes=10,\n",
+    "    max_nodes=35,\n",
+    "    min_prob=0.1,\n",
+    "    max_prob=0.5,\n",
+    "    max_wait=30,\n",
+    "    min_length=100.0,\n",
+    "    max_length=1000.0,\n",
+    "    min_speed=30.0,\n",
+    "    max_speed=100.0,\n",
+    ")"
    ]
   },
   {
@@ -92,7 +95,7 @@
     }
    ],
    "source": [
-    "for data in dataloader: \n",
+    "for data in dataloader:\n",
     "    print(data)"
    ]
   },
@@ -153,11 +156,11 @@
    ],
    "source": [
     "start_node = torch.randint(0, 10, (1,)).item()\n",
-    "end_node   = torch.randint(0, 10, (1,)).item()\n",
+    "end_node = torch.randint(0, 10, (1,)).item()\n",
     "print(start_node, end_node)\n",
-    "while start_node == end_node: \n",
-    "    end_node   = torch.randint(0, 10, (1,)).item()\n",
-    "    \n",
+    "while start_node == end_node:\n",
+    "    end_node = torch.randint(0, 10, (1,)).item()\n",
+    "\n",
     "print(start_node, end_node)"
    ]
   },
@@ -177,36 +180,48 @@
     }
    ],
    "source": [
-    "from thesis_floor_halkes.model_dynamic_attention import DynamicGATEncoder, GATModelEncoderStatic, AttentionDecoderChat\n",
+    "from thesis_floor_halkes.model_dynamic_attention import (\n",
+    "    DynamicGATEncoder,\n",
+    "    GATModelEncoderStatic,\n",
+    "    AttentionDecoderChat,\n",
+    ")\n",
     "from thesis_floor_halkes.environment.dynamic_ambulance import DynamicEnvironment\n",
-    "from thesis_floor_halkes.batch.graph_data_batch import GraphGenerator, RandomGraphPytorchDataset\n",
-    "from thesis_floor_halkes.features.dynamic.getter import DynamicFeatureGetter, RandomDynamicFeatureGetter\n",
+    "from thesis_floor_halkes.batch.graph_data_batch import (\n",
+    "    GraphGenerator,\n",
+    "    RandomGraphPytorchDataset,\n",
+    ")\n",
+    "from thesis_floor_halkes.features.dynamic.getter import (\n",
+    "    DynamicFeatureGetter,\n",
+    "    RandomDynamicFeatureGetter,\n",
+    ")\n",
     "from thesis_floor_halkes.penalties.calculator import PenaltyCalculator\n",
     "from thesis_floor_halkes.utils.adj_matrix import build_adjecency_matrix\n",
     "\n",
     "data = GraphGenerator(\n",
-    "    num_nodes = 15,\n",
-    "    edge_prob = 0.5,\n",
-    "    max_wait = 10.0,\n",
+    "    num_nodes=15,\n",
+    "    edge_prob=0.5,\n",
+    "    max_wait=10.0,\n",
     ").generate()\n",
     "\n",
     "dataset = RandomGraphPytorchDataset(\n",
-    "    num_graphs = 2,\n",
-    "    min_nodes = 5,\n",
-    "    max_nodes = 5,\n",
-    "    min_prob = 1,\n",
-    "    max_prob = 1,\n",
+    "    num_graphs=2,\n",
+    "    min_nodes=5,\n",
+    "    max_nodes=5,\n",
+    "    min_prob=1,\n",
+    "    max_prob=1,\n",
     ")\n",
     "\n",
     "env = DynamicEnvironment(\n",
-    "    static_dataset = dataset,\n",
-    "    dynamic_feature_getter = RandomDynamicFeatureGetter(),\n",
-    "    penalty_calculator = PenaltyCalculator,\n",
-    "    max_steps = 30,\n",
+    "    static_dataset=dataset,\n",
+    "    dynamic_feature_getter=RandomDynamicFeatureGetter(),\n",
+    "    penalty_calculator=PenaltyCalculator,\n",
+    "    max_steps=30,\n",
     ")\n",
     "hidden_size = 64\n",
     "\n",
-    "static_encoder = GATModelEncoderStatic(in_channels=1, hidden_size=hidden_size, edge_attr_dim=2)\n",
+    "static_encoder = GATModelEncoderStatic(\n",
+    "    in_channels=1, hidden_size=hidden_size, edge_attr_dim=2\n",
+    ")\n",
     "dynamic_encoder = DynamicGATEncoder(in_channels=2, hidden_size=hidden_size)\n",
     "decoder = AttentionDecoderChat(embed_dim=hidden_size * 2, num_heads=4)\n",
     "\n",
@@ -230,11 +245,14 @@
     "    # action, action_log_prob = self.decoder(final_embedding)\n",
     "    static_embedding = embed_graph(state.static_data, type=\"static\")\n",
     "    dynamic_embedding = embed_graph(state.dynamic_data, type=\"dynamic\")\n",
-    "    final_embedding = torch.cat((static_embedding, dynamic_embedding), dim=1) # overwegen om naar + ipv cat te doen\n",
-    "    action, action_log_prob, _ = AttentionDecoderChat(final_embedding, current_node = current_node, invalid_action_mask = visited)\n",
-    "    \n",
-    "    return action, action_log_prob\n",
-    "\n"
+    "    final_embedding = torch.cat(\n",
+    "        (static_embedding, dynamic_embedding), dim=1\n",
+    "    )  # overwegen om naar + ipv cat te doen\n",
+    "    action, action_log_prob, _ = AttentionDecoderChat(\n",
+    "        final_embedding, current_node=current_node, invalid_action_mask=visited\n",
+    "    )\n",
+    "\n",
+    "    return action, action_log_prob"
    ]
   },
   {
@@ -309,8 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emb = [{\"node\": 3, \"embedding\": 5}, \n",
-    "        {\"node\": 4, \"embedding\": 10} ]"
+    "emb = [{\"node\": 3, \"embedding\": 5}, {\"node\": 4, \"embedding\": 10}]"
    ]
   },
   {
@@ -332,7 +349,7 @@
     }
    ],
    "source": [
-    "emb['embedding']"
+    "emb[\"embedding\"]"
    ]
   },
   {
